# dummy-calculator

./: .gitignore  README.md  buildozer.spec  calculator.kv  logic.py  main.py  pyproject.toml
custom/: itemlist.py  textbox.py
kvs/: app.kv  main_screen.kv
script/: conversion.py  logic.py
